# School-Project

./: Converter.py  Main.py  README.md  Score.txt  Users.txt  functions.py  json_file.py  main.py  new.py  pyproject.toml  scores.json  users.json
