[tool.poetry]
name = "repl_python3_School-Project"
version = "0.1.0"
description = ""
authors = ["BenthicWolf <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.5.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
